# RT_SOFT

./: 10-local.rules  Dockerfile  Makefile  README.md  device_added.sh  drv.c  module.c  start.sh  test.c
doc/: CMakeLists.txt  opencv.cpp  start.sh
